# Enterprise-AI-Decision-Intelligence-Platform

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  list_models.py  production.env.example  prometheus.yml  pyproject.toml  render.yaml  requirements.txt  staging.env.example  start.sh  test_agent.py  test_api.py
agent/: .gitkeep  __init__.py  executor.py  graph.py  guardrails.py  memory.py  models.py  output_parser.py  planner.py  prompts.py  recommendation.py  router.py  state.py  tools.py
alembic/: env.py
backend/: __init__.py  config.py  log_config.py  main.py  requirements.txt
data/: .gitignore  README.md
data_pipeline/: .gitkeep
decision_engine/: __init__.py  approval_service.py  audit_service.py  exceptions.py  models.py  policy_engine.py  prompts.py  reasoning_engine.py  recommendation_engine.py  repository.py  schemas.py  workflow_engine.py
docs/: ARCHITECTURE.md  INTERVIEW_GUIDE.md  LEARNING_GUIDE.md  REVISION_PAGE_1_OVERVIEW.md  REVISION_PAGE_2_FOUNDATION.md  REVISION_PAGE_3_ML.md  REVISION_PAGE_4_BACKEND.md  REVISION_PAGE_5_CHEAT_SHEET.md  ROADMAP.md  SPRINT_0_NOTES.md  SPRINT_1_NOTES.md  SPRINT_2_NOTES.md  SPRINT_3_NOTES.md  SPRINT_4_NOTES.md  SPRINT_5_NOTES.md  SPRINT_6_NOTES.md  SPRINT_7_NOTES.md  SPRINT_8_NOTES.md  SPRINT_9_NOTES.md
feature_engineering/: __init__.py  base.py  builder.py  constants.py  delivery.py  geography.py  label.py  payments.py  products.py  reviews.py  rfm.py  utils.py  validators.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+160 files in other folders)
